--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=artgallery02
 springdoc.api-docs.path=/docs
 springdoc.swagger-ui.path=/swagger.html
+# spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 
 # logging.level.org.springframework.boot.test.context.SpringBootTestContextBootstrapper: WARN
 # logging.level.org.springframework.test.context.support.AbstractContextLoader: WARN
