playing around, build errors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,18 @@
 spring.application.name=artgallery02
 springdoc.api-docs.path=/docs
 springdoc.swagger-ui.path=/swagger.html
-# spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
+
+spring.profiles.default=sqlite
+
+server.port=8080
+
+#datasource
+# spring.datasource.url=jdbc:sqlite:memberinfo.db?date_string_format=yyyy-MM-dd HH:mm:ss
+spring.datasource.url=jdbc:sqlite:artgallery02/src/main/resources/db/artworks.db
+spring.datasource.username=
+spring.datasource.password=
+
+spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 
 # logging.level.org.springframework.boot.test.context.SpringBootTestContextBootstrapper: WARN
 # logging.level.org.springframework.test.context.support.AbstractContextLoader: WARN
