--- a/pom.xml
+++ b/pom.xml
@@ -44,17 +44,17 @@
 			<artifactId>h2</artifactId>
 		</dependency>
 
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
-			<version>3.25.2</version>
+			<version>3.45.3.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-community-dialects</artifactId>
 		</dependency>
-		-->
+		
 
 	</dependencies> 
 	<build>
